# starkmarket

./: .gitignore  Cargo.toml  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: lib.rs  test.rs
contracts/marketplace/test_snapshots/test/test/: test_marketplace.1.json
contracts/royalty_splitter/: Cargo.toml
contracts/royalty_splitter/src/: lib.rs
contracts/start_nft/: Cargo.toml
contracts/start_nft/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: NFTCard.tsx  SalesFeed.tsx
frontend/src/hooks/: useStellar.ts
frontend/src/lib/: stellar.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/actions/: nft.ts
src/app/admin/: page.tsx
src/app/api/nfts/: route.ts
src/app/api/nfts/[id]/: route.ts
src/app/dashboard/: page.tsx
src/app/marketplace/: page.tsx
src/components/: MintModal.tsx  NFTCard.tsx  SalesFeed.tsx  ThreeScene.tsx
src/context/: StellarContext.tsx
src/hooks/: useStellar.ts
src/lib/: effects.ts  stellar.ts
src/models/: NFT.ts
